fixed overflow

--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ h1, h2 {
 }
 
 h1 {
-  font-size: 36px;
+  font-size: 24px;
 }
 
 h2 {
@@ -101,14 +101,16 @@ button {
 
 .grid-container {
   display: grid;
-  gap: 10px;
   overflow: hidden;
+  grid-template-columns: 100px 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px 100px 100px;
 }
 
 .grid-item {
-  min-height: 50px;
-  min-width: 50px;
+  /* min-height: 50px;
+  min-width: 50px; */
   border: 1px solid white;
+  overflow: hidden;
 }
 
 #title {grid-area: title;}
